# advent-of-code-monorepo

./: .gitignore  README.md  day_start.sh  pyproject.toml  year_start.sh
2015/scripts/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2016/scripts/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2018/scripts/: 1.py  2.py  3.py  4.py
2023/scripts/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2024/scripts/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2025/scripts/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc_utils/: __init__.py  constants.py  input_utils.py
aoc_utils/enums/: __init__.py  directions.py
