[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["AlexLacour"]
readme = "README.md"
packages = [{include = "aoc_utils/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.14"
tqdm = "*"
numpy = "^2.3.5"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
